<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPostActivity">

    <ImageButton
        android:id="@+id/addImageID"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:background="@drawable/input_outline"
        android:cropToPadding="false"
        android:scaleType="center"
        android:src="@drawable/baseline_add_a_photo_black_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addTitleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_outline"
        android:hint="@string/postTitle"
        android:padding="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImageID" />

    <EditText
        android:id="@+id/addDescID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_outline"
        android:hint="@string/postDesc"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitleID" />

    <Button
        android:id="@+id/submitPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Blue"
        android:text="@string/post"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDescID"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>